# smartmart

./: .gitignore  AI_RECOGNITION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICKSTART.md  QUICK_FIX.md  README.md  add_firewall_rule.ps1  build_all.ps1
backend/: AI_README.md  ORDERS_API.md  README.md  SETUP.md  START_HERE.md  build_exe.py  fix_old_orders.py  init_test_data.py  migrate_add_authenticated.py  migrate_add_cost_price.py  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  security.py
backend/app/api/: analysis.py  database.py  orders.py  pairing.py  products.py  recognition.py  reports.py  samples.py  settings.py  vision.py  websocket_api.py
backend/app/models/: __init__.py  device.py  inventory.py  product.py  settings.py  transaction.py  vision.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  analysis_service.py  clip_embedder.py  faiss_manager.py  report_service.py  vision_service.py
backend/scripts/: build_index.py  evaluate.py  infer.py  prepare_samples.py
desktop/: DESKTOP_MVP.md  QUICKSTART.md  README.md  env.example  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.css  App.tsx  config.ts  main.tsx  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
miniapp/: MINIAPP_MVP.md  QUICKSTART_MINIAPP.md  README.md  app.js  app.json  app.miniapp.json  app.wxss  config.js  package.json  project.config.json  project.miniapp.json
miniapp/custom-tab-bar/: index.js  index.wxml  index.wxss
miniapp/i18n/: base.json
(+72 files in other folders)
